# PerformanceTestingCLEO

./: .buildinfo  .gitignore  0001-refactor-comment-out-checking-initialisation-for-gbx.patch  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  cog.toml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  references.html  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: CI.yml
_modules/: index.html
_sources/: index.rst.txt  references.rst.txt
_sources/usage/: getstart.rst.txt  ourdocs.rst.txt  perftests.rst.txt  validations.rst.txt
docs/doxygen/: doxygen.dox
docs/source/: conf.py  index.rst
scripts/: create_grand_datasets.py  postproc_profiling.py  run_profiling.py  shared_script_variables.py
scripts/bash/: build_builds.sh  build_cleo_cuda_openmp.sh  build_cleo_openmp.sh  build_cuda.sh  build_openmp.sh  build_serial.sh  build_threads.sh  builds.sh  compile_cleo.sh  compile_executable.sh  compiles.sh  create_grand_datasets.sh  install_kokkos_tools.sh  postproc_profiling.sh  run_cleo.sh  run_cleo_gpu.sh  run_profiling.sh  validation.sh
scripts/collisions0d/: initconds.py  initconds_colls0D.py  run_colls0d.py  setup_colls0D_script.py  setup_colls0d.py  setup_colls0d.sh  setup_colls0d_script.py
scripts/condensation0d/: setup_cond0d.py  (+1 more)
src/: CMakeLists.txt  __init__.py
src_cxx/: index.html  mock_cxx.html
src_py/: index.html  mock.html
tests/: __init__.py  test_101.py
usage/: contact.html  contributing.html  getstart.html  ourdocs.html  ourtests.html  perftests.html  validations.html
(+62 files in other folders)
